--- a/themes/light/layout/_widget/link.ejs
+++ b/themes/light/layout/_widget/link.ejs
@@ -1,6 +1,6 @@
 <% if (site.tags.length){ %>
 <div class="widget tag">
-  <h3 class="title"><%= __('tags') %></h3>
+  <h3 class="title">友情链接</h3>
   <div class="entry">
     <ul>
 <!-- link start -->
