--- a/themes/light/layout/_widget/link.ejs
+++ b/themes/light/layout/_widget/link.ejs
@@ -5,7 +5,7 @@
     <ul>
 <!-- link start -->
 <li><a href='http://bestcbooks.com/'>计算机书籍控</a></li>
-<li><a href='http://www.salttiger.com/'>SaltTigher</a></li>
+<li><a href='http://www.salttiger.com/'>SaltTiger</a></li>
 <li><a href='http://it-ebooks.cn/'>it-ebooks.cn</a></li>
 <!-- link  end -->
     </ul>
