--- a/themes/light/layout/_partial/head.ejs
+++ b/themes/light/layout/_partial/head.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="NCXVSqxqB-os803-VFMtIEd1SUNJVOIjctCfNYUwD0w" />
   <%
   var title = [];
   if (page.current > 1) title.push(__('page', page.current));
