--- a/themes/light/layout/_widget/support.ejs
+++ b/themes/light/layout/_widget/support.ejs
@@ -1,7 +1,6 @@
 <div class="widget tag">
     <h3 class="title">赞助我</h3>
     <div class="entry">
-      <p>扫描下面的二维码，安装app并注册来赞助我。</p>
-	  <img src='http://7u2hdm.com1.z0.glb.clouddn.com/qr_jianshu.png' />
+      <img src='http://7u2hdm.com1.z0.glb.clouddn.com/qr_alipay.png' style='width:100%' />
     </div>
 </div>
