--- a/themes/light/layout/_partial/head.ejs
+++ b/themes/light/layout/_partial/head.ejs
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="NCXVSqxqB-os803-VFMtIEd1SUNJVOIjctCfNYUwD0w" />
+  <meta name="description" content="龙哥盟·计算机电子书 - 百余种计算机电子书精选" />
+  <meta name="keywords" content="计算机,编程,电子书,pdf,epub,java,c++,php,python,javascript" />
   <%
   var title = [];
   if (page.current > 1) title.push(__('page', page.current));
