--- a/themes/light/layout/_widget/link.ejs
+++ b/themes/light/layout/_widget/link.ejs
@@ -5,19 +5,16 @@
 <!-- link start -->
 <li><a href='http://bestcbooks.com/'>计算机书籍控</a></li>
 <li><a href='http://www.jb51.net/books/'>脚本之家电子书</a></li>
-<li><a href='http://www.ituring.com.cn/book/ebook'>图灵社区电子书</a></li>
-<li><a href='http://www.ckook.com/'>稀酷客</a></li>
 <li><a href='http://www.kindle114.com/forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=1&sortid=1'>kindle114</a></li>
 <li><a href='http://readcolor.com/books?tag=%E8%AE%A1%E7%AE%97%E6%9C%BA'>读远</a></li>
 <li><a href='http://www.salttiger.com/'>SaltTiger</a></li>
-<li><a href='http://it-ebooks.cn/'>it-ebooks.cn</a></li>
 <li><a href='http://it-ebooks.info/'>it-ebooks.info</a></li>
-<li><a href='http://it-ebooks.org/'>it-ebooks.org</a></li>
-<li><a href='http://it-ebooks.com/'>it-ebooks.com</a></li>
-<li><a href='http://ebooks-it.net/'>ebooks-it.net</a></li>
-<li><a href='http://wowebook.org/'>wowebook.org</a></li>
-<li><a href='http://bookdl.com/'>bookdl.com</a></li>
-<li><a href='http://bookzz.org/'>bookzz.org</a></li>
+<li><a href='http://www.ituring.com.cn/book/ebook'>图灵社区电子书</a></li>
+<li><a href='https://github.com/justjavac/free-programming-books-zh_CN'>免费的编程中文书籍索引</a></li>
+<li><a href='http://en.wikibooks.org/wiki/Subject:Computing'>Wikibooks: Computing</a></li>
+<li><a href='https://www.gitbook.com/explore'>GitBook</a></li>
+<li><a href='http://wiki.jikexueyuan.com/'>极客学院Wiki</a></li>
+<li><a href='http://www.kancloud.cn/explore'>KanCloud</a></li>
 <!-- link  end -->
     </ul>
   </div>
