--- a/themes/light/source/css/_base/variable.styl
+++ b/themes/light/source/css/_base/variable.styl
@@ -1,9 +1,11 @@
 // Color
-color-background = #eee
+color-background = url(images/body.jpg)
 color-font = #444
 color-meta = #999
+color-meta-reverse = #fff
 color-border = #ddd
-color-link = #258fb8
+color-link = rgb(100,66,124)
+color-link-light = #e163e1
 
 // Font
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
