--- a/themes/light/source/css/_partial/footer.styl
+++ b/themes/light/source/css/_partial/footer.styl
@@ -1,5 +1,5 @@
 #footer
-  color color-meta
+  color color-meta-reverse
   margin-bottom 50px
   font 0.9em/1.6 font-title
-  text-shadow 0 0 1px #fff
+  // text-shadow 0 0 1px #fff
