--- a/themes/light/source/css/_partial/header.styl
+++ b/themes/light/source/css/_partial/header.styl
@@ -1,10 +1,10 @@
 #header
-  text-shadow 0 0 1px #fff
+  // text-shadow 0 0 1px #fff
   margin 50px auto
   a
-    color #999
+    color color-meta-reverse
     &:hover
-      color color-link
+      color color-link-light
       text-decoration none
     
   h1
