--- a/themes/light/source/css/_partial/index.styl
+++ b/themes/light/source/css/_partial/index.styl
@@ -2,10 +2,10 @@
   a
     display block
     padding 5px 10px
-    background color-border
-    color color-meta
+    background color-meta-reverse
+    color color-link
     font-family font-title
-    text-shadow 0 0 1px #fff
+    // text-shadow 0 0 1px #fff
     margin-bottom 50px
     &:hover
       background color-link
