--- a/themes/light/source/css/_base/layout.styl
+++ b/themes/light/source/css/_base/layout.styl
@@ -5,10 +5,12 @@
 
 body
   background color-background
+  background-size cover
+  background-attachment fixed
   color color-font
   font-family font-default
   font-size 14px
-  text-shadow 0 0 1px transparent
+  text-shadow 1px 1px 1px rgba(0,0,0,0.5)
   @media screen and (max-width: 1260px)
     margin 0 30px
   @media screen and (max-width: 600px)
