--- a/themes/light/source/css/_base/variable.styl
+++ b/themes/light/source/css/_base/variable.styl
@@ -1,11 +1,10 @@
 // Color
-color-background = url(images/body.jpg)
-color-font = #444
-color-meta = #999
+color-background = url(images/body.jpg) no-repeat
+color-font = #fff
+color-meta = #fff
 color-meta-reverse = #fff
 color-border = #ddd
-color-link = rgb(100,66,124)
-color-link-light = #e163e1
+color-link = #0cf
 
 // Font
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
