--- a/themes/light/source/css/_partial/header.styl
+++ b/themes/light/source/css/_partial/header.styl
@@ -4,9 +4,9 @@
   a
     color color-meta-reverse
     &:hover
-      color color-link-light
+      color color-link
       text-decoration none
-    
+
   h1
     font-weight normal
     font-size 2.5em
@@ -17,7 +17,7 @@
     font-size 0.9em
     line-height 1
     margin-top 10px
-  
+
   #main-nav
     font-family font-title
     line-height 2.5em
