--- a/themes/light/source/css/_partial/sidebar.styl
+++ b/themes/light/source/css/_partial/sidebar.styl
@@ -5,14 +5,15 @@
     float none
     width 100%
   .widget
-    background #fff
-    box-shadow 1px 2px 3px #ddd
+    background rgba(0, 0, 0, 0.65)
+    border-radius 17px
+    // box-shadow 1px 2px 3px #ddd
     margin-bottom 30px
     word-wrap break-word
     .title
       padding 15px 20px
       font-size 1em
-      border-bottom 1px solid color-border
+      border-bottom 1px dotted color-border
       font-weight normal
 
     .entry
