--- a/themes/light/source/css/_partial/syntax.styl
+++ b/themes/light/source/css/_partial/syntax.styl
@@ -33,12 +33,12 @@
             color color-link
 
 figure.highlight
-  background #eee
+  // background #eee
   border 1px solid color-border
   margin-top 15px
   padding 7px 15px
   border-radius 2px
-  text-shadow 0 0 1px #fff
+  // text-shadow 0 0 1px #fff
   line-height 1.6
   overflow auto
   position relative
@@ -69,7 +69,7 @@ figure.highlight
   .code
     padding-left 15px
     border-left 1px solid #fff
-    color #666
+    // color #666
 
   .line
     height: 20px
