--- a/themes/light/layout/_partial/head.ejs
+++ b/themes/light/layout/_partial/head.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="google-site-verification" content="NCXVSqxqB-os803-VFMtIEd1SUNJVOIjctCfNYUwD0w" />
-  <meta name="description" content="龙哥盟·计算机电子书 - 百余种计算机电子书精选" />
-  <meta name="keywords" content="计算机,编程,电子书,pdf,epub,java,c++,php,python,javascript" />
+  <meta charset="utf-8" />
   <%
   var title = [];
   if (page.current > 1) title.push(__('page', page.current));
@@ -18,29 +15,43 @@
   title.push(config.title);
   %>
   <title><%= title.join(' | ') %></title>
-  <% if (config.author){ %><meta name="author" content="<%= config.author %>"><% } %>
+  <% if (config.author){ %><meta name="author" content="<%= config.author %>" /><% } %>
+  
   <% if (page.description){ %>
-  <meta name="description" content="<%= page.description %>">
+  <meta name="description" content="<%= page.description %>" />
   <% } else if (config.description){ %>
-  <meta name="description" content="<%= config.description %>">
+  <meta name="description" content="<%= config.description %>" />
   <% } else if (page.excerpt){ %>
-  <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+  <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>" />
   <% } else if (page.content){ %>
-  <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+  <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>" />
   <% } %>
-  <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  
+  <% if (page.keywords){ %>
+  <meta name="keywords" content="<%= page.keywords %>" />
+  <% } else if(config.keywords) { %>
+  <meta name="keywords" content="<%= config.keywords %>" />
+  <% } %>
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  <% if (page.title){ %><meta property="og:title" content="<%= page.title %>"/><% } %>
-  <meta property="og:site_name" content="<%= config.title %>"/>
+  <% if (page.title){ %><meta property="og:title" content="<%= page.title %>" /><% } %>
+  <meta property="og:site_name" content="<%= config.title %>" />
 
+  <% if (config.google_site_verification){ %><meta name="google-site-verification" content="<%= config.google_site_verification%>" /><% } %>
+  
   <% if(page.cover) { %>
     <meta property="og:image" content="<%= page.cover %>" />
   <% } else { %>
-    <meta property="og:image" content="<%= config.cover %>"/>
+    <meta property="og:image" content="<%= config.cover %>" />
   <% } %>
 
-  <link href="http://7u2hdm.com1.z0.glb.clouddn.com/favicon.ico" rel="icon">
+  <% if(config.icon) { %>
+  <link href="<%= config.icon %>" rel="icon" />
+  <% } else { %>
+  <link href="<%- config.root %>css/images/favicon.ico" rel="icon" />
+  <% } %>
+  
   <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
   <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
   <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
