--- a/themes/light/source/css/_partial/header.styl
+++ b/themes/light/source/css/_partial/header.styl
@@ -2,7 +2,7 @@
   // text-shadow 0 0 1px #fff
   margin 50px auto
   a
-    color color-meta-reverse
+    color color-meta
     &:hover
       color color-link
       text-decoration none
