--- a/themes/light/source/css/_partial/article.styl
+++ b/themes/light/source/css/_partial/article.styl
@@ -130,14 +130,16 @@ article
       margin-top 15px
 
     blockquote
-      border-top 1px solid color-border
-      border-bottom 1px solid color-border
-      font-style italic
-      font-family font-serif
-      font-size 1.2em
-      padding 0 30px 15px
-      text-align center
-      footer
+      // border-top 1px solid color-border
+      // border-bottom 1px solid color-border
+      border-left 4px solid color-border
+      // font-style italic
+      // font-family font-serif
+      // font-size 1.2em
+      padding 0 15px
+      color #ccc
+      // text-align center
+      /*footer
         border-top none
         font-size 0.8em
         line-height 1
@@ -147,8 +149,14 @@ article
           &:before
             content '—'
             color #ccc
-            padding 0 0.5em
-
+            padding 0 0.5em*/
+    
+    blockquote>:first-child
+      margin-top 0px
+    
+    blockquote>:last-child
+      margin-bottom 0px
+    
     code, pre
       font-family font-mono
 
