--- a/themes/light/source/css/_partial/index.styl
+++ b/themes/light/source/css/_partial/index.styl
@@ -2,7 +2,7 @@
   a
     display block
     padding 5px 10px
-    background color-meta-reverse
+    background color-meta
     color color-link
     font-family font-title
     // text-shadow 0 0 1px #fff
