--- a/themes/light/source/css/_partial/comment.styl
+++ b/themes/light/source/css/_partial/comment.styl
@@ -1,7 +1,8 @@
 #comment
   padding 20px
-  background #fff
-  box-shadow 1px 2px 3px #ddd
+  background rgba(0,0,0,0.65)
+  border-radius 17px
+  // box-shadow 1px 2px 3px #ddd
   margin-bottom 50px
   .title
     font-weight normal
