--- a/themes/light/source/css/_partial/article.styl
+++ b/themes/light/source/css/_partial/article.styl
@@ -102,9 +102,9 @@ article
         display none
       &:before
         position absolute
-        font 32px font-icon    
+        font 32px font-icon
         top 0
-        left 0 
+        left 0
         width 32px
         text-align center
 
@@ -150,13 +150,13 @@ article
             content '—'
             color #ccc
             padding 0 0.5em*/
-    
+
     blockquote>:first-child
       margin-top 0px
-    
+
     blockquote>:last-child
       margin-bottom 0px
-    
+
     code, pre
       font-family font-mono
 
@@ -193,7 +193,7 @@ article
       border-bottom: none
       margin-top: 10px
       margin-bottom: 10px
-    
+
     h1, h2
       font-weight normal
       border-bottom 1px dashed color-border
@@ -271,6 +271,11 @@ article
       &.more-link
         &:before
           content '\f054'
+
+      &.share-link
+        margin-left 5px
+        &:before
+          content '\f045'
 
       &.comment-link
         &:before
