--- a/themes/light/layout/_partial/article.ejs
+++ b/themes/light/layout/_partial/article.ejs
@@ -25,11 +25,12 @@
     </footer>
     <% } %>
     <footer>
-        <% if (item.comments && config.duoshuo_shortname){ %>
         <div class="alignright">
-          <a href="<%- url_for(item.path) %>#comment" class="comment-link">Comments</a>
+          <% if (item.comments && config.duoshuo_shortname){ %>
+          <a href="<%- url_for(item.path) %>#comment" class="comment-link">评论</a>
+          <% } %>
+          <a href='javascript:void(0)' class="share-link bdsharebuttonbox" data-cmd="more">分享</a>
         </div>
-        <% } %>
         <%- partial('post/category') %>
         <%- partial('post/tag') %>
         <!-- partial('post/share') -->
