--- a/themes/light/layout/_partial/pagination.ejs
+++ b/themes/light/layout/_partial/pagination.ejs
@@ -1,9 +1,10 @@
 <nav id="pagination">
-  <% if (page.prev){ %>
-    <a href="<%- config.root %><%- page.prev_link %>" class="alignleft prev"><%= __('prev') %></a>
-  <% } %>
-  <% if (page.next){ %>
-    <a href="<%- config.root %><%- page.next_link %>" class="alignright next"><%= __('next') %></a>
-  <% } %>
-  <div class="clearfix"></div>
+  <% if (page.total > 1){ %>
+  <nav id="page-nav">
+    <%- paginator({
+      prev_text: "&laquo; 上一页",
+      next_text: "下一页 &raquo;"
+    }) %>
+  </nav>
+<% } %>
 </nav>
