--- a/themes/light/source/css/_base/layout.styl
+++ b/themes/light/source/css/_base/layout.styl
@@ -4,9 +4,12 @@
   font-family "Microsoft YaHei" !important
 
 body
-  background color-background
-  background-size cover
+  background-image img-background
+  background-color color-background
   background-attachment fixed
+  background-repeat no-repeat
+  background-position center
+  background-size cover
   color color-font
   font-family font-default
   font-size 14px
@@ -15,6 +18,7 @@ body
     margin 0 30px
   @media screen and (max-width: 600px)
     font-size 13px
+
 
 h1, h2, h3, h4, h5, h6
   font-family font-title
