--- a/themes/light/source/css/_base/variable.styl
+++ b/themes/light/source/css/_base/variable.styl
@@ -1,9 +1,10 @@
 // Color
-color-background = url(images/body.jpg) no-repeat
+color-background = rgb(5,10,16)
 color-font = #fff
 color-meta = #fff
 color-border = #ddd
 color-link = #0cf
+img-background = url(images/body.jpg)
 
 // Font
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
