--- a/themes/light/source/css/_base/layout.styl
+++ b/themes/light/source/css/_base/layout.styl
@@ -4,12 +4,6 @@
   font-family "Microsoft YaHei" !important
 
 body
-  background-image img-background
-  background-color color-background
-  background-attachment fixed
-  background-repeat no-repeat
-  background-position center
-  background-size cover
   color color-font
   font-family font-default
   font-size 14px
@@ -67,3 +61,17 @@ a
     margin-right 300px
   @media screen and (max-width: 900px)
     margin-right 0
+    
+#bg
+  background-image img-background
+  background-color color-background
+  background-attachment fixed
+  background-repeat no-repeat
+  background-position center
+  background-size cover
+  height 100%
+  left 0
+  position fixed
+  top 0
+  width 100%
+  z-index -1
