--- a/themes/landfarz/layout/_partial/article.ejs
+++ b/themes/landfarz/layout/_partial/article.ejs
@@ -20,13 +20,13 @@
     <% if (item.excerpt && index){ %>
     <footer>
       <div class="alignleft">
-        <a href="<%- config.root %><%- item.path %>#more" class="more-link"><%= theme.excerpt_link %></a>
+        <a href="<%- config.root %><%- item.path %>#more" class="more-link"><%= __('more') %></a>
       </div>
     </footer>
     <% } %>
     <footer>
         <div class="alignright">
-          <% if (item.comments && config.duoshuo_shortname){ %>
+          <% if (item.comments && theme.duoshuo_shortname){ %>
           <a href="<%- url_for(item.path) %>#comment" class="comment-link">评论</a>
           <% } %>
           <a href='javascript:void(0)' class="share-link bdsharebuttonbox" data-cmd="more">分享</a>
