--- a/themes/landfarz/layout/_partial/comment.ejs
+++ b/themes/landfarz/layout/_partial/comment.ejs
@@ -1,4 +1,4 @@
-<% if (page.comments && config.duoshuo_shortname){ %>
+<% if (page.comments && theme.duoshuo_shortname){ %>
 <section id="comment">
   <h1 class="title"><%= __('comment') %></h1>
 
@@ -7,17 +7,17 @@
   <!-- 多说评论框 end -->
   <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
   <script type="text/javascript">
-  var duoshuoQuery = {short_name:'<%= config.duoshuo_shortname %>'};
+  var duoshuoQuery = {short_name:'<%= theme.duoshuo_shortname %>'};
     (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
       ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
       ds.charset = 'UTF-8';
-      (document.getElementsByTagName('head')[0] 
+      (document.getElementsByTagName('head')[0]
        || document.getElementsByTagName('body')[0]).appendChild(ds);
     })();
   </script>
   <!-- 多说公共JS代码 end -->
-  
+
 </section>
 <% } %>
