--- a/themes/landfarz/layout/_partial/pagination.ejs
+++ b/themes/landfarz/layout/_partial/pagination.ejs
@@ -2,8 +2,8 @@
   <% if (page.total > 1){ %>
   <nav id="page-nav">
     <%- paginator({
-      prev_text: "&laquo; 上一页",
-      next_text: "下一页 &raquo;"
+      prev_text: "&laquo; " + __('prev'),
+      next_text: __('next') + " &raquo;"
     }) %>
   </nav>
 <% } %>
