--- a/themes/landfarz/source/css/_partial/sidebar.styl
+++ b/themes/landfarz/source/css/_partial/sidebar.styl
@@ -29,17 +29,18 @@
   .search
     margin-bottom 30px
     input
-      background #fff
+      background rgba(0,0,0,0.65)
+      border-radius 17px
       font-family font-title
       font-style italic
       font-size 1em
       padding 10px 15px
-      border 1px solid color-border
+      border 0
       width 100%
       box-sizing border-box
-      color color-meta
+      color color-font
       &:focus
-        color color-font
+        color #ddd
 
   .tag
     small
