--- a/themes/landfarz/layout/_widget/link.ejs
+++ b/themes/landfarz/layout/_widget/link.ejs
@@ -4,6 +4,7 @@
     <ul>
 <!-- link start -->
 <li><a href='http://bestcbooks.com/'>计算机书籍控</a></li>
+<li><a href='http://www.yiibai.com/'>易百教程</a></li>
 <!-- link  end -->
     </ul>
   </div>
