--- a/themes/landfarz/layout/_widget/link.ejs
+++ b/themes/landfarz/layout/_widget/link.ejs
@@ -5,6 +5,9 @@
 <!-- link start -->
 <li><a href='http://bestcbooks.com/'>计算机书籍控</a></li>
 <li><a href='http://www.yiibai.com/'>易百教程</a></li>
+<li><a href='http://www.uncletoo.com/'>PHP中文网</a></li>
+<li><a href='http://www.code4apk.com/'>code4apk</a></li>
+<li><a href='http://codecloud.net/'>程序员的资料库</a></li>
 <!-- link  end -->
     </ul>
   </div>
