--- a/themes/landfarz/source/css/_base/variable.styl
+++ b/themes/landfarz/source/css/_base/variable.styl
@@ -7,10 +7,10 @@ color-link = #0cf
 img-background = url(images/body.jpg)
 
 // Font
-font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
-font-serif = "Georgia", serif
-font-mono = Monaco, Menlo, Consolas, Courier New, monospace
-font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
+font-default = "Microsoft YaHei"
+font-serif = "Microsoft YaHei"
+font-mono = Consolas, Monaco, Lucida Console, monospace
+font-title = "Microsoft YaHei"
 
 font-icon = FontAwesome
 font-icon-path = 'font/fontawesome-webfont'
