--- a/themes/landfarz/layout/_partial/head.ejs
+++ b/themes/landfarz/layout/_partial/head.ejs
@@ -40,6 +40,9 @@
 
   <% if (theme.google_site_verification){ %><meta name="google-site-verification" content="<%= theme.google_site_verification%>" /><% } %>
   <% if (theme.baidu_site_verification){ %><meta name="baidu-site-verification" content="<%= theme.baidu_site_verification%>" /><% } %>
+  <% if (theme.sogou_site_verification){ %><meta name="sogou_site_verification" content="<%= theme.sogou_site_verification%>" /><% } %>
+  <% if (theme.bing_site_verification){ %><meta name="msvalidate.01" content="<%= theme.bing_site_verification%>" /><% } %>
+  <% if (theme.haosou_site_verification){ %><meta name="360-site-verification" content="<%= theme.haosou_site_verification%>" /><% } %>
 
   <% if(page.cover) { %>
     <meta property="og:image" content="<%= page.cover %>" />
