--- a/themes/landfarz/layout/_widget/link.ejs
+++ b/themes/landfarz/layout/_widget/link.ejs
@@ -3,6 +3,7 @@
   <div class="entry">
     <ul>
 <!-- link start -->
+<li><a href="http://www.apachecn.org/">ApacheCN</a></li>
 <li><a href='http://bestcbooks.com/'>计算机书籍控</a></li>
 <li><a href='http://www.uncletoo.com/'>PHP中文网</a></li>
 <!-- link  end -->
