--- a/themes/landfarz/layout/_widget/ad.ejs
+++ b/themes/landfarz/layout/_widget/ad.ejs
@@ -3,11 +3,9 @@
     <div class="entry">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
-             style="display:block"
+             style="display:inline-block;width:336px;height:280px"
              data-ad-client="ca-pub-3565452474788507"
-             data-ad-slot="7684666756"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-ad-slot="6386939092"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
